adding swagger REST API for users
