# swagger/index.yaml
@@ -34,7 +34,10 @@ paths:
     $ref: ./resync.yaml
   /status:
     $ref: ./status.yaml
-
+  /users:
+    $ref: ./users.yaml
+  /users/{userID}:
+    $ref: ./user.yaml
 
 definitions:
 
@@ -44,6 +47,69 @@ definitions:
     properties:
       status:
         type: string
+
+  # users (org and external)
+  users:
+    type: object
+    properties:
+      users:
+        type: array
+        items:
+          $ref: "#/definitions/user"
+
+  user:
+    type: object
+    properties:
+      name:
+        type: string
+        x-isnullable: false
+      external:
+        type: boolean
+        x-isnullable: false
+
+  userDetails:
+    type: object
+    properties:
+      teams:
+        type: array
+        items:
+          $ref: "#/definitions/team"
+      repositories:
+        type: array
+        items:
+          $ref: "#/definitions/repository"
+
+  repository:
+    type: object
+    properties:
+      name:
+        type: string
+        x-isnullable: false
+      public:
+        type: boolean
+        x-isnullable: false
+        x-omitempty: false
+      archived:
+        type: boolean
+        x-isnullable: false
+        x-omitempty: false
+
+  team:
+    type: object
+    properties:
+      name:
+        type: string
+        x-isnullable: false
+      owners:
+        type: array
+        items:
+          type: string
+          minLength: 1
+      members:
+        type: array
+        items:
+          type: string
+          minLength: 1
 
   # Goliac statistics
   status:
