# swagger_gen/models/team.go
@@ -1,0 +1,104 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+	"strconv"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// Team team
+//
+// swagger:model team
+type Team struct {
+
+	// members
+	Members []string `json:"members"`
+
+	// name
+	Name string `json:"name,omitempty"`
+
+	// owners
+	Owners []string `json:"owners"`
+}
+
+// Validate validates this team
+func (m *Team) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateMembers(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateOwners(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *Team) validateMembers(formats strfmt.Registry) error {
+	if swag.IsZero(m.Members) { // not required
+		return nil
+	}
+
+	for i := 0; i < len(m.Members); i++ {
+
+		if err := validate.MinLength("members"+"."+strconv.Itoa(i), "body", m.Members[i], 1); err != nil {
+			return err
+		}
+
+	}
+
+	return nil
+}
+
+func (m *Team) validateOwners(formats strfmt.Registry) error {
+	if swag.IsZero(m.Owners) { // not required
+		return nil
+	}
+
+	for i := 0; i < len(m.Owners); i++ {
+
+		if err := validate.MinLength("owners"+"."+strconv.Itoa(i), "body", m.Owners[i], 1); err != nil {
+			return err
+		}
+
+	}
+
+	return nil
+}
+
+// ContextValidate validates this team based on context it is used
+func (m *Team) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Team) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Team) UnmarshalBinary(b []byte) error {
+	var res Team
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
